# pyEpiDisplay

./: .gitignore  CSE583_summ_function.ipynb  LICENSE  PyNotebook.ipynb  README.md  RNotebook.ipynb  __init__.py  component.md  data_test.py  environment.yml  logistic.display.ipynb  logistic.display.py  pyproject.toml  pyreadr.ipynb  usecases.md  user_story.md  userstories.md
.github/: ci
.github/workflows/: ci  pylint.yml  pylint_workflow.yml  testsuite.yaml
.ipynb_checkpoints/: logistic.display-checkpoint.ipynb  regress.display-checkpoint.ipynb  userstories-checkpoint.md
data/: import_data
docs/: component_specification.md  demo.ipynb  functional_specification.md
examples/: example_ci_mean.py  example_ci_prop.py  example_crosstab.py  example_data.py  example_des.py  example_logistic_display.py  example_regress_display.py  example_summ.py  example_tab1.py  example_table_stack.py  example_tabpct.py
src/pyEpiDisplay/: ci_mean_Anna.py  ci_prop_Anna.py  data.py  logistic_display.py  regress.display.ipynb  summ_testfunc.py  tableStack.py  tableStack_test.py
src/pyEpiDisplay  copy/: __init__.py  logistic.display.py  tab1.py
src/pyEpiDisplay.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pyepidisplay/: CSE583_summ_function.py  __init__.py  ci_mean.py  ci_prop.py  crosstab_function.py  crosstab_testfunc.py  data.py  des.py  dotplot.py  logistic_display.py  regress_display.py  summ_function.py  tab1.py  table_stack.py  tabpct.py
src/pyepidisplay.egg-info/: SOURCES.txt  top_level.txt
src/pyepidisplay1.egg-info/: PKG-INFO
tests/: test_ci_mean.py  test_ci_prop.py  test_crosstab.py  test_data.py  test_des.py  test_dotplot.py  test_logistic_display.py  test_regress_display.py  test_summ.py  test_tab1.py  test_table_stack.py  test_tabpct.py
