[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pyEpiDisplay"
version = "0.0.0"
description = "A package for epidemiological data visualization and analysis."
authors = [
    {name = "Anna Kroening", email = "akroenin@uw.edu"},
    {name = "Suphanat Wongsanuphat", email = "suphanat@uw.edu"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3"
]
requires-python = ">=3.8"

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0"
]   

[project.urls]
Homepage = "https://github.com/suphanatwong/pyEpiDisplay"
Issues = "https://github.com/suphanatwong/pyEpiDisplay/issues"
