[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pyepidisplay"
version = "0.0.0"
description = "A package for epidemiological data visualization and analysis."
authors = [
    {name = "Anna Kroening", email = "akroenin@uw.edu"},
    {name = "Suphanat Wongsanuphat", email = "suphanat@uw.edu"},
    {name = "Cat Kim", email = "suyunk@uw.edu"},
    {name = "Jiayi Ding", email = "jiayid03@uw.edu"},
    {name = "Marthin Mandig", email = "m4rth1n@uw.edu"}
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3"
]
requires-python = ">=3.8"

dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "statsmodels"
]

[project.urls]
Homepage = "https://github.com/suphanatwong/pyEpiDisplay"
Issues = "https://github.com/suphanatwong/pyEpiDisplay/issues"


[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"pyepidisplay.datasets" = ["*.csv"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff] 
exclude = ["tests","examples","docs"]
